--- a/css/student-solution.css
+++ b/css/student-solution.css
@@ -97,10 +97,114 @@ i.ex-10-icon{
 }
 
 /* .ex11-------------------------------------------------- */
-i.ex-11-icon{
-    transition:  transform 3s;
+@keyframes load3quarter{
+    0%{
+        transform: rotate(0deg);
+    }
+    85%{
+        transform: rotate(270deg);
+    }
+    100%{
+        transform: rotate(0deg);
+    }
 }
 
 i.ex-11-icon:hover{
+    animation: load3quarter 2s linear infinite;
+}
 
+/* ex12------------------------------------------------------ */
+@keyframes topWhite12{
+    0%{
+        left: 10%;
+    }
+    50%{
+        left: calc(100% - 60px);
+    }
+    100%{
+        left: 10%;
+    }
+}
+
+@keyframes botWhite12{
+    0%{
+        right: 20%;
+    }
+    50%{
+        right: calc(100% - 60px);
+    }
+    100%{
+        right: 20%;
+    }
+}
+
+a.ex-12-button:hover div.ex-12-top-white{
+    animation: topWhite12 2s linear infinite;
+}
+
+a.ex-12-button:hover div.ex-12-bottom-white{
+    animation: botWhite12 2s linear infinite;
+}
+
+/* ex13------------------------------------------------------------ */
+@keyframes rotateTopWhite13{
+    0%{
+        left: 10%;
+        top: -10px;
+    }
+    25%{
+        left: calc(100% - 30px);
+        top: -10px;
+    }
+    45%{
+        left: calc(100% - 30px);
+        top: calc(100% - 10px);
+    }
+    75%{
+        left: 0%;
+        top: calc(100% - 10px);
+    }
+    95%{
+        left: -30px;
+        top: -10px;
+    }
+    100%{
+        left: 10%;
+        top: -10px;
+    }
+}
+
+@keyframes rotateBotWhite13{
+    0%{
+        right: 20%;
+        bottom: -10px;
+    }
+    25%{
+        right: calc(100% - 30px);
+        bottom: -10px;
+    }
+    45%{
+        right: calc(100% - 30px);
+        bottom: calc(100% - 10px);
+    }
+    75%{
+        right: -30px;
+        bottom: calc(100% - 10px);
+    }
+    95%{
+        right: -30px;
+        bottom: -10px;
+    }
+    100%{
+        right: 20%;
+        bottom: -10px;
+    }
+}
+
+a.ex-13-button:hover div.ex-13-top-white{
+    animation: rotateTopWhite13 4s linear infinite;
+}
+
+a.ex-13-button:hover div.ex-13-bottom-white{
+    animation: rotateBotWhite13 4s linear infinite;
 }
